# grdatapy

./: .gitignore  debug.py  pyproject.toml  readme.md
grdata/: client.py
grdata/models/health/: dentists.py  doctors.py  generic.py  inspections.py  pharmacists.py  vaccination.py
