[tool.poetry]
name = "grdatapy"
version = "0.1.0"
description = "A API Wrapper for greek goverment open data platform"
authors = ["Dimitris Strantsalis <dstrants@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
pydantic = "^1.8.1"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
